# bbt-test

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  Makefile  README.md  mypy.ini  pyproject.toml  ruff.toml
.github/: CODEOWNERS
.github/workflows/: pypi-publish.yml  test-pypi-publish.yml  test.yml
bbttest/: __init__.py  alg.py  const.py  model.py  py_bbt.py  utils.py
bbttest/bbt/: __init__.py  _types.py  _utils.py  alg.py  const.py  model.py  params.py  py_bbt.py
bbttest/bbt/plots/: _critical_difference.py
bbttest/tests/: __init__.py
bbttest/tests/bbt/: __init__.py  _utils.py  alg.py  bbt.py  model.py
bbttest/tests/bbt/plots/: __init__.py  _critical_difference.py
examples/: 01_simple_bbt_comparison.ipynb  02_critical_difference_diagram.ipynb
tests/bbt/: test__utils.py  test_alg.py  test_py_bbt.py
tests/bbt/plots/: __init__.py  test__critical_difference.py
tests/data/: README.md  benchmarking_mol.csv
tests/regression/: test_benchmarking_mol.py
tests/tests/bbt/: __init__.py  test__utils.py  test_alg.py  test_bbt.py
tests/tests/bbt/plots/: test__critical_difference.py
